# sabi-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  setup.sh
.github/workflows/: ci.yml  release.yml
.kiro/specs/agent-rs/: design.md  requirements.md  tasks.md
src/: app.rs  config.rs  event.rs  executor.rs  gemini.rs  main.rs  message.rs  onboarding.rs  openai.rs  state.rs  tool_call.rs  ui.rs
