[package]
name = "sabi-tui"
version = "0.1.0"
edition = "2024"
description = "A terminal-based AI agent implementing the ReAct pattern for system administration"
authors = ["Sabi-TUI contributors"]
license = "MIT"

[[bin]]
name = "sabi"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
tui-textarea = "0.7"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
regex = "1"
dirs = "5"
chrono = "0.4"

[dev-dependencies]
proptest = "1"
tempfile = "3"
