[package]
name = "sabi-tui"
version = "0.1.5"
edition = "2024"
description = "Terminal AI agent with ReAct pattern - execute shell commands, run Python, analyze images"
authors = ["n4ar"]
license = "MIT"
repository = "https://github.com/n4ar/sabi-tui"
homepage = "https://github.com/n4ar/sabi-tui"
readme = "README.md"
keywords = ["terminal", "tui", "ai-agent", "cli", "llm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sabi"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
tui-textarea = "0.7"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (rustls for cross-compilation support)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
regex = "1"
dirs = "5"
chrono = "0.4"
arboard = "3.6.1"

[dev-dependencies]
proptest = "1"
tempfile = "3"
